--- a/sachnoi/templates/app/forgot_password.html
+++ b/sachnoi/templates/app/forgot_password.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,26 +8,21 @@
     <link rel="stylesheet" href="{% static 'assets/css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/styles_forgot_password.css' %}" />
 </head>
-<body>
-    <header class="header">
-        
-        <div class="header-content">
-            <ul>
-                <li class="title-page"><a href="{% url 'index' %}">Trang chủ</a></li>
-            </ul>
-        </div>
+<!-- forgot_password.html -->
 
-    </header>
-    <div class="container">
-        <div class="box">
-            <form action="" method="post">
-                {% csrf_token %}
-                <h1 class="title">Quên mật khẩu</h1>
-                <h3>Vui lòng nhập email để tiếp tục</h3>
-                <input type="email" name="email" placeholder="Email của bạn" required>
-                <input type="submit" value="Tiếp tục" class="continue">
-            </form>
-        </div>
-    </div>
+<body>
+    <h1>Quên mật khẩu</h1>
+    <form method="POST">
+        {% csrf_token %}
+        <input type="email" name="email" placeholder="Nhập email của bạn" required>
+        <button type="submit">Gửi mã OTP</button>
+    </form>
+    {% if messages %}
+        <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </body>
 </html>
