--- a/sachnoi/templates/app/detail.html
+++ b/sachnoi/templates/app/detail.html
@@ -182,7 +182,7 @@
         <div class="sidebar-box">
             <div class="sidebar-header">
                 <div class="author-image">
-                    <img src="assets/images/Nguyen-Nhat-Anh-vanvn.jpg" alt="Tac gia" class="image">
+                    <img src="https://png.pngtree.com/png-clipart/20190611/original/pngtree-vector-hand-painted-five-pointed-star-png-image_2917571.jpg" alt="Tac gia" class="image">
                 </div>
                 <div class="book-information">
                     <h1>{{book.title}}</h1>
