--- a/sachnoi/templates/app/category.html
+++ b/sachnoi/templates/app/category.html
@@ -87,7 +87,7 @@
         <div class="title" id="tai_chinh">
             <h1>Sách Tài chính</h1>
             <a href="#">
-                <h3>Xem thêm</h3>
+                <h3>Sắp xếp</h3>
             </a>
         </div>
         
@@ -121,7 +121,7 @@
         <div class="title" id="phat_trien">
             <h1>Phát triển bản thân</h1>
             <a href="#">
-                <h3>Xem thêm</h3>
+                <h3>Sắp xếp</h3>
             </a>
         </div>
         
@@ -155,7 +155,7 @@
         <div class="title" id="suc_khoe">
             <h1>Sức khỏe</h1>
             <a href="#">
-                <h3>Xem thêm</h3>
+                <h3>Sắp xếp</h3>
             </a>
         </div>
         
@@ -189,7 +189,7 @@
         <div class="title" id="xa_hoi">
             <h1>Xã hội</h1>
             <a href="#">
-                <h3>Xem thêm</h3>
+                <h3>Sắp xếp</h3>
             </a>
         </div>
        
@@ -223,7 +223,7 @@
         <div class="title" id="tam_sinh_ly">
             <h1>Tâm sinh lý</h1>
             <a href="#">
-                <h3>Xem thêm</h3>
+                <h3>Sắp xếp</h3>
             </a>
         </div>
         
@@ -257,7 +257,7 @@
         <div class="title" id="tu_duy">
             <h1>Tư duy</h1>
             <a href="#">
-                <h3>Xem thêm</h3>
+                <h3>Sắp xếp</h3>
             </a>
         </div>
         
