--- a/sachnoi/templates/app/category.html
+++ b/sachnoi/templates/app/category.html
@@ -13,12 +13,12 @@
 <body>
     <!-- header -->
     <header class="header">
-        <div class="search-container">
+        {% comment %} <div class="search-container">
             <input type="text" placeholder="Tìm kiếm" class="search-input">
             <button class="search-button">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
-        </div>
+        </div> {% endcomment %}
 
         <div class="header-content">
             <ul>
