--- a/sachnoi/static/assets/css/author_page.css
+++ b/sachnoi/static/assets/css/author_page.css
@@ -1,6 +1,5 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
@@ -58,3 +57,24 @@ body {
     margin: 0;
   }
   
+  @media (max-width: 1200px) {
+    .author-card {
+      width: 150px;
+    }
+    .author-name {
+      font-size: 14px;
+    }
+  }
+  @media (max-width: 480px) {
+    .author-card {
+      width: 120px;
+    }
+  }
+  @media (max-width: 320px) {
+    .author-card {
+      width: 100px;
+    }
+    .author-name {
+      font-size: 12px;
+    }
+  }
