--- a/sachnoi/templates/app/account.html
+++ b/sachnoi/templates/app/account.html
@@ -55,11 +55,16 @@
                  class="image" 
                  id="user-image">
             <ul class="dropdown-menu" id="dropdown-menu">
-                <li><a href="/profile/">Thông tin người dùng</a></li>
-                <li><a href="/favorites/">Danh sách yêu thích</a></li>
-                <li><a href="{% url 'login' %}">Đăng nhập</a></li>
-                <li><a href="{% url 'signup' %}">Đăng ký</a></li>
-                <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="/profile/">Thông tin người dùng</a></li>
+                    <li><a href="/favorite/">Danh sách yêu thích</a></li>
+                    <li><a href="/change-password/">Đổi mật khẩu</a></li>
+                    <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Đăng nhập</a></li>
+                    <li><a href="{% url 'signup' %}">Đăng ký</a></li>
+                {% endif %}
+               
             </ul>   
         </div>
         
@@ -81,7 +86,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'favorite_books'}">
+                    <a href="/favorite/">
                             Sách yêu thích
                     </a>
                 </li>
