--- a/sachnoi/templates/app/favorite_books.html
+++ b/sachnoi/templates/app/favorite_books.html
@@ -48,20 +48,11 @@
                 <li><a href="{% url 'category' %}">Thể loại</a></li>
             </ul>
         </div>
-
-        <div class="personal-account">
-            <img src="{% static 'assets/images/Flag_of_Vietnam.svg.webp' %}" 
-                 alt="personal image" 
-                 class="image" 
-                 id="user-image">
-            <ul class="dropdown-menu" id="dropdown-menu">
-                <li><a href="/profile/">Thông tin người dùng</a></li>
-                <li><a href="/favorites/">Danh sách yêu thích</a></li>
-                <li><a href="{% url 'login' %}">Đăng nhập</a></li>
-                <li><a href="{% url 'signup' %}">Đăng ký</a></li>
-                <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
-            </ul>   
-        </div>
+        <a href="{% url 'profile' %}">
+            <div class="personal-account">
+                <img src="{% static 'assets/images/Flag_of_Vietnam.svg.webp' %}" alt="personal image" class="image">
+            </div>
+        </a> 
         
     </header>
     <!-- end header -->
@@ -71,19 +62,14 @@
             <div class="account-image">
                 <img src="{% static 'assets/images/Flag_of_Vietnam.svg.webp' %}" alt="Anh dai dien">
             </div>
-            <h3>VuDuyen</h3>
-            <h3>vuthuduyen.2010@gmail.com</h3>
+            <h3>{{request.user}}</h3>
+            <h3>{{request.user.email}}</h3>
             <ul>
                 <li>
                     <a href="{% url 'book_history' %}" >
                             Sách đã đọc
                     </a>
                 </li> 
-                {% comment %} <li>
-                    <a href="{% url 'favorite_books' %}" class="page-title">
-                            Sách yêu thích
-                    </a>
-                </li> {% endcomment %}
                 <li>
                     <a href="{% url 'save_book' %}">
                             Sách đã lưu
@@ -195,41 +181,6 @@
             </div>
         </div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const userImage = document.getElementById("user-image");
-            const dropdownMenu = document.getElementById("dropdown-menu");
-    
-            // Hiển thị / ẩn menu khi click vào ảnh
-            userImage.addEventListener("click", function() {
-                dropdownMenu.style.display = dropdownMenu.style.display === "block" ? "none" : "block";
-            });
-    
-            // Ẩn menu nếu click ra ngoài
-            document.addEventListener("click", function(event) {
-                if (!userImage.contains(event.target) && !dropdownMenu.contains(event.target)) {
-                    dropdownMenu.style.display = "none";
-                }
-            });
-        });
-    </script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const barIcon = document.getElementById("bar-icon");
-            const dropdownMenuBar = document.getElementById("dropdown-menu-bar");
-    
-            // Hiển thị / ẩn menu khi click vào ảnh
-            barIcon.addEventListener("click", function() {
-                dropdownMenuBar.style.display = dropdownMenuBar.style.display === "block" ? "none" : "block";
-            });
-    
-            // Ẩn menu nếu click ra ngoài
-            document.addEventListener("click", function(event) {
-                if (!barIcon.contains(event.target) && !dropdownMenuBar.contains(event.target)) {
-                    dropdownMenuBar.style.display = "none";
-                }
-            });
-        });
-    </script>
+   
 </body>
 </html>
