--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -72,11 +72,15 @@
                  class="image" 
                  id="user-image">
             <ul class="dropdown-menu" id="dropdown-menu">
-                <li><a href="{% url 'account' %}">Thông tin người dùng</a></li>
-                <li><a href="{% url 'favorite_books' %} ">Danh sách yêu thích</a></li>
-                <li><a href="{% url 'login' %}">Đăng nhập</a></li>
-                <li><a href="{% url 'signup' %}">Đăng ký</a></li>
-                <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="/profile/">Thông tin người dùng</a></li>
+                    <li><a href="/favorite/">Danh sách yêu thích</a></li>
+                    <li><a href="/change-password/">Đổi mật khẩu</a></li>
+                    <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Đăng nhập</a></li>
+                    <li><a href="{% url 'signup' %}">Đăng ký</a></li>
+                {% endif %}
             </ul>   
         </div>
         
