--- a/sachnoi/templates/app/index.html
+++ b/sachnoi/templates/app/index.html
@@ -75,13 +75,14 @@
                 {% if user.is_authenticated %}
                     <li><a href="/profile/">Thông tin người dùng</a></li>
                     <li><a href="/favorite/">Danh sách yêu thích</a></li>
+                    <li><a href="{% url 'text_to_speech' %}">voice</a></li>
                     <li><a href="/change-password/">Đổi mật khẩu</a></li>
                     <li><a href="{% url 'logout' %}">Đăng xuất</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Đăng nhập</a></li>
                     <li><a href="{% url 'signup' %}">Đăng ký</a></li>
                 {% endif %}
-            </ul>   
+            </ul>    
         </div>
         
     </header>
